# rust-learning

control_flow_match_some/: Cargo.toml
control_flow_match_some/src/: main.rs
element-rust-ui/: Cargo.toml  compare.html  index.html
element-rust-ui/src/: lib.rs
hello-world/src/: main.rs
observer/src/: lib.rs  main.rs
rust-simple-sever/: Cargo.toml
rust-simple-sever/src/: main.rs  server.rs
rust-simple-sever/src/http/: method.rs  mod.rs  query_string.rs  request.rs
rust-waterprint/: Cargo.toml  index.html
rust-waterprint/src/: lib.rs
rust_fibonacci/: Cargo.toml  index.html
rust_fibonacci/src/: lib.rs
rust_module/src/: animate.rs  lib.rs  main.rs  utils.rs
so_many_trait/: Cargo.toml
so_many_trait/src/: main.rs
string_slice/src/: main.rs
trait_usage/: Cargo.toml
trait_usage/src/: main.rs
what_is_enum_vec/: Cargo.toml
what_is_enum_vec/src/: main.rs
what_is_hashmap/: Cargo.toml  index.html
what_is_hashmap/src/: lib.rs  main.rs
what_is_lifetime/: Cargo.toml
what_is_lifetime/src/: main.rs
what_is_trait_struct_method/: Cargo.toml
what_is_trait_struct_method/src/: main.rs
what_is_vec_arr/: Cargo.toml
what_is_vec_arr/src/: main.rs
